[package]
name = "meh-utils"
description = "Utils to convert data exported with grad_meh to formats, which can be served to the browser."
version = "0.1.0"
authors = ["Gruppe Adler <kontakt@gruppe-adler.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.9", features = ["cargo"] }
contour = "0.4.0"
image = "0.23.14"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "7.1"
thiserror = "1.0"
anyhow = "1.0"
flate2 = "1.0"
tempdir = "0.3.7"
mvt = "0.7"
geo = "0.18"
geojson = { version = "0.22", features = ["geo-types"] }
glob="0.3.0"

